修改bg及移除不要的動畫

--- a/watch.html
+++ b/watch.html
@@ -13,6 +13,7 @@
         margin: 0;
         padding: 0;
         font-family: "Teko", sans-serif;
+        background: rgb(66, 60, 60);
         
       }
       .container {
@@ -41,14 +42,6 @@
         position: absolute;
         animation: circle 60s infinite linear;
       }
-      @keyframes circle2 {
-        from {
-          transform: rotate(0deg);
-        }
-        to {
-          transform: rotate(360deg);
-        }
-      }
       .date {
         position: absolute;
         width: 300px;
@@ -76,7 +69,7 @@
       }
       .footer{
         position: absolute;
-        bottom: 50px;
+        bottom: 5px;
         font-size: 32px;
         color: black;
       }
@@ -97,6 +90,7 @@
       </div>
       <div class="footer">reirajiang © 2020</div>
     </div>
+    
     <script>
       var time = new Date();
       // 星期
